--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,30 @@ body {
     width: 3rem;
   }
 }
+
+.hero-section {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+
+  /* Mobile */
+  padding-inline: 1rem;
+  padding-block: 2rem;
+  gap: 1rem;
+
+  & h1 {
+    color: var(--black);
+    /* Mobile */
+    font-size: var(--heading-font-size-sm);
+    line-height: var(--heading-line-height-sm);
+  }
+
+  & p {
+    /* Mobile */
+    padding-inline: 1.8125rem;
+
+    font-size: 1rem;
+    line-height: 1.625;
+    color: var(--meduim-brown);
+  }
+}
