--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body {
   /* Mobile */
   gap: 1.5rem 1.5625rem;
   padding-inline: 1rem;
+  padding-block-end: 6.25rem;
   grid-template-areas:
     "graphic graphic"
     "graphic graphic"
@@ -164,5 +165,45 @@ body {
     font-size: 1rem;
     line-height: 1.625;
     color: var(--meduim-brown);
+  }
+}
+
+.intro-section {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  /* MObile */
+  padding-inline: 1rem;
+  align-items: center;
+  gap: 2.5rem;
+
+  & > img {
+    width: 18.75rem;
+  }
+  & > div {
+    display: flex;
+    flex-direction: column;
+    /* Mobile */
+    text-align: center;
+    gap: 1.5rem;
+
+    & h2 {
+      /* Mobile */
+      font-size: 1.625rem;
+      line-height: 1.269;
+    }
+    & > p {
+      /* Mobile */
+
+      font-size: 1rem;
+      line-height: 1.625;
+      color: var(--meduim-brown);
+    }
+    .consult-btn {
+      /* Mobile */
+      align-self: center;
+      background-color: var(--light-red);
+      padding-block: 0.5rem;
+    }
   }
 }
