--- a/css/style.css
+++ b/css/style.css
@@ -272,42 +272,53 @@ footer {
   /* gap: 2.5rem; */
   /* padding-block-end: 6.25rem; */
   /* Tablet */
-  padding-inline: 1rem;
+  padding-inline: 0rem 2.5rem;
   align-items: center;
   gap: 4.3125rem;
-  padding-block-end: 6.25rem;
+  padding-block-end: 7.25rem;
 
   & > img {
     /* Mobile */
     width: 18.75rem;
     /* Tablet */
     width: 22.75rem;
-    margin-inline-start: -3.75rem;
+    margin-inline-start: -2.75rem;
   }
   & > div {
     display: flex;
     flex-direction: column;
+
     /* Mobile */
     text-align: center;
+    gap: 1.5rem;
+    /* Tablet */
     gap: 1.5rem;
 
     & h2 {
       /* Mobile */
-      font-size: 1.625rem;
-      line-height: 1.269;
+      /* font-size: 1.625rem; */
+      /* line-height: 1.269; */
+      /*tablet */
+      font-size: var(--heading-font-size-sm);
+      line-height: var(--heading-line-height-sm);
     }
     & > p {
+      color: var(--meduim-brown);
       /* Mobile */
-
       font-size: 1rem;
       line-height: 1.625;
-      color: var(--meduim-brown);
+      /*tablet */
+      font-size: var(--body-font-size);
+      line-height: var(--body-line-height-med);
     }
     .consult-btn {
-      /* Mobile */
-      align-self: center;
       background-color: var(--light-red);
-      padding-block: 0.5rem;
+
+      /* Mobile */
+      /* align-self: center; */
+      /* padding-block: 0.5rem; */
+      /* Mobile */
+      padding-block: 0.875rem;
 
       &:hover {
         background-color: var(--summer-yellow);
@@ -322,7 +333,10 @@ footer {
     display: inline flex;
     overflow-x: auto;
 
-    gap: 0rem 0.9375rem;
+    /* Mobile */
+    /* gap: 0rem 0.9375rem; */
+    /* Tablet */
+    gap: 0rem 1.875rem;
 
     /* Mobile */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
@@ -332,8 +346,11 @@ footer {
     }
     & img {
       /* Mobile */
+      /* border-radius: 0.5rem; */
+      /* height: 11.25rem; */
+      /* Tablet*/
       border-radius: 0.5rem;
-      height: 11.25rem;
+      height: 22.5rem;
     }
   }
 }
@@ -341,14 +358,20 @@ footer {
   display: flex;
   flex-direction: column;
   /* Mobile */
-  gap: 2rem;
+  /* gap: 2rem; */
   align-items: center;
-  padding-block-end: 6.25rem;
+  /* padding-block-end: 6.25rem; */
+  /* Mobile */
+  gap: 3.5rem;
+  padding-block-end: 7.5rem;
 
   & h2 {
     /* Mobile */
-    font-size: 1.5rem;
-    line-height: 1.25;
+    /* font-size: 1.5rem; */
+    /* line-height: 1.25; */
+    /* tablet */
+    font-size: var(--heading-font-size-sm);
+    line-height: var(--heading-line-height-sm);
   }
 }
 
