--- a/css/style.css
+++ b/css/style.css
@@ -309,17 +309,25 @@ footer {
   /* gap: 2.5rem; */
   /* padding-block-end: 6.25rem; */
   /* Tablet */
-  padding-inline: 0rem 2.5rem;
+  /* padding-inline: 0rem 2.5rem; */
+  /* align-items: center; */
+  /* gap: 4.3125rem; */
+  /* padding-block-end: 7.25rem; */
+  /* Desktop */
+  padding-inline: 10.3125rem;
   align-items: center;
-  gap: 4.3125rem;
-  padding-block-end: 7.25rem;
+  gap: 7.8125rem;
+  padding-block-end: 5.5rem;
 
   & > img {
     /* Mobile */
-    width: 18.75rem;
+    /* width: 18.75rem; */
     /* Tablet */
-    width: 22.75rem;
-    margin-inline-start: -2.75rem;
+    /* width: 22.75rem; */
+    /* margin-inline-start: -2.75rem; */
+    /* Desktop */
+    width: 27.8125rem;
+    margin-inline-start: 0rem;
   }
   & > div {
     display: flex;
@@ -330,6 +338,8 @@ footer {
     gap: 1.5rem;
     /* Tablet */
     gap: 1.5rem;
+    /* Desktop */
+    gap: 2.125rem;
 
     & h2 {
       /* Mobile */
@@ -338,6 +348,9 @@ footer {
       /*tablet */
       font-size: var(--heading-font-size-sm);
       line-height: var(--heading-line-height-sm);
+      /*Desktop */
+      font-size: var(--heading-font-size-med);
+      line-height: var(--heading-line-height-med);
     }
     & > p {
       color: var(--meduim-brown);
