--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,11 @@ body {
 }
 
 footer {
+  padding-block-end: clamp(2rem, 0.5687rem + 6.1069vw, 3.5rem);
   /* Mobile */
   /* padding-block-end: 2rem; */
   /* Tablet */
-  padding-block-end: 3.5rem;
+  /* padding-block-end: 3.5rem; */
 }
 
 .arrows {
