hero section clamp

--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,9 @@ footer {
   text-align: center;
   display: flex;
   flex-direction: column;
+  padding-inline: clamp(1rem, -0.3418rem + 5.7252vw, 2.4063rem);
+  padding-block: clamp(2rem, 0.0916rem + 8.1425vw, 4rem);
+  gap: clamp(1rem, 0.344rem + 2.799vw, 1.6875rem);
 
   /* Mobile */
   /* padding-inline: 1rem; */
@@ -305,12 +308,15 @@ footer {
   /* padding-block: 4rem; */
   /* gap: 1.6875rem; */
   /* Desktop */
-  padding-inline: 2.40625rem;
-  padding-block: 4.125rem 5rem;
-  gap: 1.4375rem;
+  /* padding-inline: 2.40625rem; */
+  /* padding-block: 4.125rem 5rem; */
+  /* gap: 1.4375rem; */
 
   & h1 {
     color: var(--black);
+
+    font-size: clamp(2rem, 1.2844rem + 3.0534vw, 2.75rem);
+    line-height: var(--heading-line-height-sm);
     /* Mobile */
     /* font-size: var(--heading-font-size-sm); */
     /* line-height: var(--heading-line-height-sm); */
@@ -318,12 +324,16 @@ footer {
     /* font-size: 2.75rem; */
     /* line-height: 1.25; */
     /* Desktop*/
-    font-size: var(--heading-font-size-lg);
-    line-height: var(--heading-line-height-lg);
+    /* font-size: var(--heading-font-size-lg); */
+    /* line-height: var(--heading-line-height-lg); */
   }
 
   & p {
     color: var(--meduim-brown);
+    padding-inline: clamp(1.8125rem, 0.0592rem + 7.4809vw, 3.65rem);
+    font-size: clamp(1rem, 0.8807rem + 0.5089vw, 1.125rem);
+    line-height: 1.625;
+
     /* Mobile */
     /* padding-inline: 1.8125rem; */
     /* font-size: 1rem; */
@@ -523,6 +533,43 @@ footer {
     /* padding-inline: 10.3125rem 10.25rem; */
     /* padding-block-start: 2.125rem; */
   }
+
+  .hero-section {
+    padding-inline: 2.40625rem;
+    padding-block: clamp(4rem, 3.8571rem + 0.2976vw, 4.125rem)
+      clamp(4rem, 2.8571rem + 2.381vw, 5rem);
+    gap: clamp(1.4375rem, 1.9732rem + -0.5952vw, 1.6875rem);
+    /* Tablet */
+    /* padding-inline: 2.40625rem; */
+    /* padding-block: 4rem; */
+    /* gap: 1.6875rem; */
+    /* Desktop */
+    /* padding-inline: 2.40625rem; */
+    /* padding-block: 4.125rem 5rem; */
+    /* gap: 1.4375rem; */
+    & h1 {
+      font-size: clamp(2.75rem, 1.8929rem + 1.7857vw, 3.5rem);
+      line-height: 1.25;
+      /* Tablet */
+      /* font-size: 2.75rem; */
+      /* line-height: 1.25; */
+      /* Desktop*/
+      /* font-size: var(--heading-font-size-lg); */
+      /* line-height: var(--heading-line-height-lg); */
+    }
+
+    & p {
+      padding-inline: clamp(3.65rem, -14rem + 36.7708vw, 19.0938rem);
+      /* Tablet */
+      /* padding-inline: 3.65rem; */
+      /* font-size: var(--body-font-size); */
+      /* line-height: var(--body-line-height-med); */
+      /* Tablet */
+      /* padding-inline: 19.09375rem; */
+      font-size: var(--body-font-size);
+      line-height: var(--body-line-height-med);
+    }
+  }
   .grid-sqts {
     grid-template-areas:
       "graphic graphic ui apps"
@@ -570,6 +617,12 @@ footer {
 
     & p {
       max-width: 33.75rem;
+    }
+  }
+
+  .hero-section {
+    & h1 {
+      line-height: var(--heading-line-height-lg);
     }
   }
   .grid-sqts {
